--- a/Project/Details.html
+++ b/Project/Details.html
@@ -154,7 +154,7 @@
                     </g>
                   </svg>
                 </div>
-                <h2>Climate Stripes</h2>
+                <h2 id="StripsTitle">Climate Stripes</h2>
                 <div class="chart_container" id="stripesChartContainer">
                   <div class="tooltip" id="tooltip_stripes"></div>
                   <svg id="stripesChart"></svg>
