--- a/Project/Details.html
+++ b/Project/Details.html
@@ -177,7 +177,7 @@
                       <g class="x_axis"></g>
                       <g class="x_axis_label"><text>Months</text></g>
                       <g class="y_axis"></g>
-                      <g class="y_axis_label"><text>Anomaly (°C)</text></g>
+                      <g class="y_axis_label"><text>Annual Anomaly (°C)</text></g>
                     </g>
                   </svg>
                   <div class="caption table-caption" id="hottestCaption">
@@ -202,7 +202,7 @@
                       <g class="x_axis"></g>
                       <g class="x_axis_label"><text>Months</text></g>
                       <g class="y_axis"></g>
-                      <g class="y_axis_label"><text>Anomaly (°C)</text></g>
+                      <g class="y_axis_label"><text>Annual Anomaly (°C)</text></g>
                     </g>
                   </svg>
                   <div class="caption table-caption" id="coldestCaption">
